--- a/DRW/Makefile
+++ b/DRW/Makefile
@@ -1,7 +1,12 @@
-CC=gcc
-CFLAGS=-c -Wall
-TARGET=NumSquares
 
-$(TARGET): $(TARGET).cpp
+CC=g++
+CFLAGS=-std=c++11 -Wall -g
+
+FindNumOfBitOne: % : %.cpp FORCE
+	$(CC) $(CFLAGS) $< -o $@ -lm
+FindNumOfOne: % : %.cpp FORCE
 	$(CC) $(CFLAGS) $< -o $@ -lm
 
+
+
+FORCE:
