--- a/DRW/Makefile
+++ b/DRW/Makefile
@@ -6,6 +6,8 @@ FindNumOfBitOne: % : %.cpp FORCE
 	$(CC) $(CFLAGS) $< -o $@ -lm
 FindNumOfOne: % : %.cpp FORCE
 	$(CC) $(CFLAGS) $< -o $@ -lm
+CentralSphere: % : %.cpp FORCE
+	$(CC) $(CFLAGS) $< -o $@ -lm
 
 
 
