--- a/DRW/Makefile
+++ b/DRW/Makefile
@@ -6,7 +6,10 @@ FindNumOfBitOne: % : %.cpp FORCE
 	$(CC) $(CFLAGS) $< -o $@ -lm
 FindNumOfOne: % : %.cpp FORCE
 	$(CC) $(CFLAGS) $< -o $@ -lm
+
 CentralSphere: % : %.cpp FORCE
+	$(CC) $(CFLAGS) $< -o $@ -lm
+BinomialCoefficient: % : %.cpp FORCE
 	$(CC) $(CFLAGS) $< -o $@ -lm
 
 
