--- a/Virtu/Makefile
+++ b/Virtu/Makefile
@@ -2,7 +2,11 @@
 CC=g++
 CFLAGS=-std=c++11 -Wall -g
 
+FindAllCombinations: % : %.cpp FORCE
+	$(CC) $(CFLAGS) $< -o $@ -lm
+
 FindNumSqNums: % : %.cpp FORCE
 	$(CC) $(CFLAGS) $< -o $@ -lm
+
 FORCE:
 
