finished question: FindLatticePoints

--- a/Virtu/Makefile
+++ b/Virtu/Makefile
@@ -2,10 +2,13 @@
 CC=g++
 CFLAGS=-std=c++11 -Wall -g
 
-FindAllCombinations: % : %.cpp FORCE
+FindLatticePoints: % : %.cpp FORCE
 	$(CC) $(CFLAGS) $< -o $@ -lm
 
 FindNumSqNums: % : %.cpp FORCE
+	$(CC) $(CFLAGS) $< -o $@ -lm
+
+FindAllCombinations: % : %.cpp FORCE
 	$(CC) $(CFLAGS) $< -o $@ -lm
 
 FORCE:
