finished q1~q3 on previous codility

--- a/Virtu/Makefile
+++ b/Virtu/Makefile
@@ -2,6 +2,15 @@
 CC=g++
 CFLAGS=-std=c++11 -Wall -g
 
+q3: % : %.cpp FORCE
+	$(CC) $(CFLAGS) $< -o $@ -lm
+
+q2: % : %.cpp FORCE
+	$(CC) $(CFLAGS) $< -o $@ -lm
+
+q1: % : %.cpp FORCE
+	$(CC) $(CFLAGS) $< -o $@ -lm
+
 FindLatticePoints: % : %.cpp FORCE
 	$(CC) $(CFLAGS) $< -o $@ -lm
 
