--- a/DRW/Makefile
+++ b/DRW/Makefile
@@ -2,6 +2,9 @@
 CC=g++
 CFLAGS=-std=c++11 -Wall -g
 
+FindNumSetsCollinearPts: % : %.cpp FORCE
+	$(CC) $(CFLAGS) $< -o $@ -lm
+
 FindNumPairs4AutomorphicShift: % : %.cpp FORCE
 	$(CC) $(CFLAGS) $< -o $@ -lm
 
